# localnet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/localnet_access/: __init__.py  __main__.py  acl.py  cli.py  display.py  network.py  proxy.py  scanner.py  tunnel.py
src/localnet_access/Policy/: PolicyAcl.py  ScannerPolicyEnum.py
tests/: test_acl.py  test_cli.py  test_network.py  test_proxy.py  test_tunnel.py
