[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localnet-access"
version = "0.1.0"
description = "Instantly share local dev services with anyone on your network"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "qrcode>=7.4",
    "rich>=13.0",git 
]

[project.scripts]
localnet = "localnet_access.cli:main"

[project.urls]
Homepage = "https://github.com/hoysengleang/localnet"
Repository = "https://github.com/hoysengleang/localnet"
Issues = "https://github.com/hoysengleang/localnet/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]

